                CHANGES in TimeWarp version 1.0-13 (2015-04-11)
CHANGES
    o   add optimization to dateWarp(), dateShift(), dateAlign(),
        dateParse(), dateFormat(), dateMatch() so that when there
	are many duplicates, we only do the slow date computation
	once for each unique value.  This provides huge speed ups
	for very long vectors with dates duplicated many times.

                CHANGES in TimeWarp version 1.0-9 (2014-03-27)
CHANGES
    o   change default for ymd8 arg on dateParse() to TRUE
    o   make dateParse() use lookup tables for parsing
    	standard format dates (10 to 15x speedup)
    o   make underlying atomic type integer in dateParse()

                CHANGES in TimeWarp version 1.0-8 (2014-03-27)
CHANGES
    o   allow more flexibility in specification arguments in dateWarp()
    o   allow use of 'to' and 'len' args in dateSeq()

                CHANGES in TimeWarp version 1.0-7 (2013-03-20)
CHANGES
    o   fix partial matching in data frame in holidays()

                CHANGES in TimeWarp version 1.0-5 (2012-03-10)
CHANGES
    o   make dateParse() able to handle dates like '2012.03.10'

                CHANGES in TimeWarp version 1.0-4 (2012-01-27)
CHANGES
    o   make the error.how argument in dateMatch() accept the
        value 'stop', which causes dateMatch() to stop with
        an error if no matching date is found.

    o   allow the how argument in dateMatch() to take a two-part
        value, e.g., how='nearest.stop' is equivalent to
	how='nearest' and error.how='stop'.

                CHANGES in TimeWarp version 1.0-3 (2011-12-21)
CHANGES
    o   make dateSeq() return zero length sequence when given
        start and end dates that align to be zero length, rather
        than stopping with an error.

                CHANGES in TimeWarp version 1.0-2 (2011-12-19)
CHANGES
    o   dateFormat() dynamically figures out if the system needs
    	or can handle date format specs like %02m.
