@@ -52,6 +52,10 @@ dateFormat <- function(date, format = NULL, optimize.dups = TRUE)
         format <- gsub('%04Y', '%Y', format, fixed=TRUE)
     if (!dateFormat.env$f02md.ok && regexpr('%02', format, fixed=TRUE)>0)
         format <- gsub('%02', '%', format, fixed=TRUE)
+    if (is.factor(date)) {
+        yu <- dateFormat(levels(date), format=format, optimize.dups=FALSE)
+        return(yu[as.integer(date)])
+    }
     if (optimize.dups && length(date) > 50 && length(xu <- unique(date)) < length(date)/2) {
         # lots of duplicates -- do the slow date computations only for the unique values
         yu <- dateFormat(xu, format=format, optimize.dups=FALSE)
